# pythonRAG

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  architecture_idea.md  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: auto-release.yml  ci.yml  docs.yml  release.yml
docs/: changelog.md  faq.md  index.md
docs/api/: core.md  pipelines.md
docs/examples/: openai.md  qdrant.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
examples/: README.md  advanced_configurations.py  basic_usage.py  getting_started.ipynb  interactive_qdrant_rag.py  openai_usage.py  qdrant_example.py  qdrant_pipeline_example.py
src/pythonrag/: __init__.py  cli.py  core.py  exceptions.py
src/pythonrag/pipelines/: __init__.py  qdrant_pipeline.py
tests/: __init__.py  test_core.py
